Changed text in index
Changed text and links in chores/index.cshtml

--- a/ChoresApplication/Views/ChoresModel/Index.cshtml
+++ b/ChoresApplication/Views/ChoresModel/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Chores index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("New chore", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.ChoreDescription)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit chore", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Show chore details", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Delete chore", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
